2020-12-28	v2.28.10	olikraus@gmail.com
  * Added Euro Symbol to _te fonts (issue 1321) 
  * Added support for ST7528 (issue 986) 
  * Added support for ST7571 (issue 1298) 
  * Added support for ST7586 YMC240160 (issue 1183)
  * Added support for UC1617 JLX128128 (issue 1151)
  * Added support for SH1106 Visionox 128X32 (issue 1250)
  * Added support for Raystar SSD1305 (issue 1111)
  * Added support for KS0713 controller (issue 1314)
  * Added support for ST7567_HEM6432 (issue 1159)
  * U8g2 16 Bit Mode enabled by default for ARM and ESP Systems (issue 1222)
2021-09-03	v2.29.11	olikraus@gmail.com
  * Update for getStrWidth/getUTF8Width: The new return value might be little bit larger (issue 1561)
  * New draw procedure drawButtonUTF8 (issue 1577)
  * Added vertical mirror option U8G2_MIRROR_VERTICAL for u8g2 (mattnutsch@gmail.com, issue 1474).
  * Added support for UC1638 based 196x96 display (issue 371)
  * Added support for HD44102 and T7932 displays (issue 1492)
  * Added support for SSD1320 (issue 1351)
  * Added support for S1D15721 (issue 1473)
  * Added support for SSD1306 EA OLEDS102 (issue 1493)
  * Added support for UC1601 128x64 (issue 1501)
  * Font Wiki page splitted into four sub-pages to avoid the GitHub 'abuse' message.
2021-09-07	v2.30.1	olikraus@gmail.com
  * Bugfix drawButtonUTF8 (added C++ code, issue 1577)
2021-09-19	v2.31.1	olikraus@gmail.com
  * Added icons from https://app.streamlinehq.com/icons/pixel (issue 1589)
2021-09-20	v2.31.2	olikraus@gmail.com
  * Bugfix release for include error (issues 1592 and 1594)
2022-xx-xx      v2.32.x  olikraus@gmail.com
  * SH1107 128x80 (issue 1598)
  * ST7920 256x32 (issue 1593)
  * ST7567 122x32 (issue 1759)
  * ST7571 128X96 (issue 1575)
  * ST7571 128x128 (bugfix issue 1576)
  * Added support for UC1609 (issue 1565)
  * Added support for GU800 series of Vacuum Fluorescent Displays (VFD, issue 1604)
  * Changed SPI Mode for Sharp displays (ls013..., issue 1771)
  * Added many more fonts
  